* Noteworthy changes in release ?.? (?-?-?) []

** Changes in behaviour

  "time -p" no longers adds the "Command exited with non-zero status" message.
  This is a backward-incompatible change for better POSIX compliance.
  Many downstream distributions previously patched 'time' to behave this way
  (Debian added '-q', Fedora patched '-p').


* Noteworthy changes in release 1.8 (2017-11-07) [stable]

** Licensing

  First official release under GPLv3-or-later.
  Previous version (v1.7) was GPLv2-or-later.
  The code in the git repository has been updated to GPLv3-or-later
  in 2015 (in git-tagged version 1.7.1).


** New Features

  time supports new -q/--quiet option to suppresses abnormal
  program terminal (non-exit codes or signals).
  Modelled after Debian's  https://bugs.debian.org/56853 .

  time now uses the following exit codes (same as GNU coreutils' env):
   125 = Wrong usage or internal error prior to exec attempt.
   126 = Program located, but not usable.
   127 = Could not find program to exec.

  time now exits with code '128 + Signal number' when the program
  is terminated by a signal.
  Modelled after Debian's 'non-normal-exit' upstream patch,
  and behaves the same as GNU coreutils' timeout(1).

  time now reports MAX-RSS values correctly on modern systems
  (the old code base, last updated in 1996, incorrectly calculated
  pages/kilobytes and overestimated MAX-RSS).
  Modelled after Debian's https://bugs.debian.org/649402 .


** Improvements

  Use gnulib modules and build infrastructure.

  New tests infrastructure (make check).

  Portability improvements (e.g. detection of time.h, sys/resources.h,
  getrusage now delegated to gnulib).



Changes in version 1.7.1:
* Released under GPL V3 License

Major changes in version 1.7:

* Reports average memory use figures more accurately on SunOS sparc,
  Ultrix mips, and Sony NEWS.
* Reports when the process being run is terminated by a signal,